refactor .env files

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
-DJANGO_DEFAULT_EMAIL=
-DJANGO_EMAIL_HOST_USER=
-DJANGO_EMAIL_HOST_PASSWORD=
+DJANGO_DEBUG=1
+DJANGO_SECRET_KEY=i#66(3%m!21lx=iv8bi&c2wy5zag!lmd$=hm*%d4w)zo9drtez
+DJANGO_ALLOWED_HOSTS=*
 DJANGO_EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-DJANGO_SECRET_KEY=SECRET
+DJANGO_DB_ENGINE=django.db.backends.postgresql
 DJANGO_DB_NAME=db
 DJANGO_DB_USER=db_user
 DJANGO_DB_PASSWORD=db_password
-DJANGO_DEBUG=1
-DJANGO_ALLOWED_HOSTS=*
-DJANGO_DB_ENGINE=django.db.backends.postgresql
 DJANGO_DB_HOST=db
 DJANGO_DB_PORT=5432
 DATABASE=postgres
 DJANGO_SETTINGS_MODULE=AllProject.settings
+DJANGO_DEFAULT_EMAIL=bistwen@gmail.com
+DJANGO_EMAIL_HOST_USER =bistwen@gmail.com
+DJANGO_EMAIL_HOST_PASSWORD =$ergey_gmail
 DJANGO_EMAIL_HOST=smtp.gmail.com
 DJANGO_EMAIL_PORT=465
 DJANGO_EMAIL_USE_SSL=True
