--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -6,7 +6,7 @@ services:
     expose:
       - 8000
     env_file:
-      - .env.prod
+      - .env.example
     volumes:
       - static_volume:/home/app/django/static
       - media_volume:/home/app/django/media
@@ -18,7 +18,7 @@ services:
       dockerfile: Dockerfile_websocket
     command: daphne -b 0.0.0.0 -p 4154 AllProject.asgi:application
     env_file:
-      - .env.prod
+      - .env.example
     depends_on:
       - db
     expose:
@@ -31,7 +31,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - .env.db.prod
+      - .env.db.example
   nginx:
     build: ./nginx
     volumes:
