--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-DJANGO_DEBUG=1
-DJANGO_SECRET_KEY=i#66(3%m!21lx=iv8bi&c2wy5zag!lmd$=hm*%d4w)zo9drtez
+DJANGO_DEBUG=
+DJANGO_SECRET_KEY=secret_key
 DJANGO_ALLOWED_HOSTS=*
-DJANGO_EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 DJANGO_DB_ENGINE=django.db.backends.postgresql
 DJANGO_DB_NAME=db
 DJANGO_DB_USER=db_user
@@ -10,15 +9,5 @@ DJANGO_DB_HOST=db
 DJANGO_DB_PORT=5432
 DATABASE=postgres
 DJANGO_SETTINGS_MODULE=AllProject.settings
-DJANGO_DEFAULT_EMAIL=bistwen@gmail.com
-DJANGO_EMAIL_HOST_USER =bistwen@gmail.com
-DJANGO_EMAIL_HOST_PASSWORD =$ergey_gmail
-DJANGO_EMAIL_HOST=smtp.gmail.com
-DJANGO_EMAIL_PORT=465
-DJANGO_EMAIL_USE_SSL=True
-CORS_ALLOW_ALL_ORIGINS=True
-CELERY_BROKER=redis://redis:6379/0
-REDIS_HOST=redis
-REDIS_PORT=6379
 
 SITE_HOST=127.0.0.1
