--- a/Dockerfile_websocket
+++ b/Dockerfile_websocket
@@ -1,4 +1,4 @@
-FROM python:3.7.9
+FROM python:3.7.9-slim
 WORKDIR /home/ws
 
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -6,7 +6,5 @@ ENV PYTHONUNBUFFERED 1
 
 RUN pip install --upgrade pip
 
-COPY requirements.txt /home/ws/requirements.txt
-RUN pip install -r requirements.txt
-
 COPY . /home/ws
+RUN pip install -r requirements.txt
